# libby-bracket

./: .gitignore  LICENSE  README.md  cleanlibbydata.py  compare.py  getlibbydata.py  pyproject.toml  sandbox.py
.github/workflows/: python-app.yml
book_rank/: compare_books.py
libby_bracket/: matchup.py  parse_libby.py
src/libby_bracket/: __init__.py  cli.py  matchup.py  parse_libby.py
src/libby_bracket/scripts/: clean.py  compare.py  fetch.py
tests/: test_cli.py  test_matchup.py  test_parse_libby.py
tests/artifacts/: borrowed_only_even.json  borrowed_only_odd.json  duplicates.json
