[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "libby_bracket"
description = "CLI to rank books read on Libby"
requires-python = ">=3.7"
version = "0.0.1"
dependencies = [
    "requests"
]

# [project.scripts]
# my-script = "libby_bracket.libbytestscript.py"