[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "libby_bracket"
description = "CLI to rank books read on Libby"
requires-python = ">=3.7"
version = "0.0.1"
dependencies = [
    "requests",
    "pytest"
]

[project.scripts]
lbfetch = "libby_bracket:lbfetch"
lbclean = "libby_bracket:lbclean"
lbcompare = "libby_bracket:lbcompare"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]